1998-04-05  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* ZoomRaster.m ([ZoomRaster -handleConfigureWidth:Height:]): 
	When newHeight exceeds newWidth, make the zoom be the smaller
	(perhaps already adjusted width).

1998-04-04  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* ZoomRaster.m: Include Drawer.h.
	([ZoomRaster -draw:X:Y:]): Define in both X and Win32 cases.

	* XPixmap.m ([XPixmap -createEnd]): Add better error checking
	after XpmReadFileToPixmap.
	([XPixmap -drawX:Y:raster:]): drawOn:X:Y:GC:Caller renamed to this.
	GC and the pixmap come from looking in the statically typed Raster
	argument.

	* Raster.m ([Raster -draw:X:Y:]): Now calls drawX:Y:raster:,
	not drawOn:X:Y:GC:Caller.  Define in both X and Win32 cases.

	* Raster.h: Include Drawer.h, not XDrawer.h.  Do it in both
	X and Win32 cases.
	(-draw:X:Y:): Make first argument conform to Drawer, not XDrawer
	protocol.  Do it in both X and Win32 cases.

	* Makefile (XDRAWER_H): Remove.  Change to Drawer.h throughout.

	* Drawer.h:  Renamed from XDrawer.h.  Protocol is now consists
	of the method drawX:Y:raster:, not drawOn:X:Y:GC:Caller:.

1998-04-02  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* win32dib.[ch] (dib_fill): Make width and height arguments unsigned.
	(dib_ellipse): New function.

	* internal.[hm]: New function tkobjc_raster_ellipse.

	* Raster.[hm]: New method ellipseX0:Y0:X1:Y1:Width:Color:.

	* TkExtra.m (ensureBltSupportFiles): Cope with the inability
	to find the Swarm source tree; use the current directory.
	([TkExtra -preInitWithArgc:argv:]): Load bltGraph.tcl instead
	of setting up the autoload path.  Look for word.tcl in the
	current directory if there is not value for [info library].

1998-03-31  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* ZoomRaster.m ([ZoomRaster -handleConfigureWidth:Height:]): Don't
	adjust newWidth unless there is disagreement between the computed
	width and height zoom.

1998-03-29  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
