@@ -41,8 +41,8 @@
   
   text = strdup ([[globalTkInterp 
                     eval: 
-                      "%s create text %d %d -text \"%s\" -anchor c", 
-                    [canvas getWidgetName],x,y,string] result]);
+                      "%s create text %d %d -text \"%s\" -font %s -anchor c", 
+                    [canvas getWidgetName],x,y,string,font] result]);
   
   [self createBindings];
   
